--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div class="logo">
                     <a href="./">
                         <div class="icon">
-                            <svg viewBox="0 0 24 24"><path fill="currentColor" d="m7.375 16.781l1.25-1.562L4.601 12l4.024-3.219l-1.25-1.562l-5 4a1 1 0 0 0 0 1.562l5 4zm9.25-9.562l-1.25 1.562L19.399 12l-4.024 3.219l1.25 1.562l5-4a1 1 0 0 0 0-1.562l-5-4zm-1.649-4.003l-4 18l-1.953-.434l4-18z"/></svg>
+                            <svg height="1.75em" viewBox="0 0 24 24"><path fill="currentColor" d="m7.375 16.781l1.25-1.562L4.601 12l4.024-3.219l-1.25-1.562l-5 4a1 1 0 0 0 0 1.562l5 4zm9.25-9.562l-1.25 1.562L19.399 12l-4.024 3.219l1.25 1.562l5-4a1 1 0 0 0 0-1.562l-5-4zm-1.649-4.003l-4 18l-1.953-.434l4-18z"/></svg>
                         </div>
                         Logo
                     </a>
@@ -110,7 +110,7 @@
     </nav>
     <script>
         const menubtn = document.querySelector(".menu"),
-        navbar = document.querySelector('nav')
+        navbar = document.querySelector('nav');
 
         menubtn.onclick = function (){
             navbar.classList.toggle("active")
